BAP-17869: Fixes for disabled buttons, dropdown in filters, title on contact view page (#20632)
* BAP-17869: Fixes for disabled buttons, dropdown in filters, title on contact view page
- change styles for disabled buttons
- fix dropdown alignment and horizontal scrollbar issue
- change offsets for title on contact view page
- add base RTL support for CRUD pages

--- a/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/mobile/grid-views.scss
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/mobile/grid-views.scss
@@ -16,7 +16,7 @@
     }
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: $tablet-devices-media-breakpoint) {
     .inner-grid {
         .grid-views {
             margin: $oro-datagrid-inner-grid-views-medium-offset;
