--- a/src/Oro/Bundle/FilterBundle/Resources/public/css/scss/filter.scss
+++ b/src/Oro/Bundle/FilterBundle/Resources/public/css/scss/filter.scss
@@ -14,7 +14,7 @@
         visibility: $filter-box-criteria-visibility;
         z-index: $filter-box-criteria-z-index;
         margin-top: $filter-box-criteria-offset-top;
-        margin-left: $filter-box-criteria-offset-left;
+        margin-#{$start}: $filter-box-criteria-offset-left;
         top: $filter-box-criteria-top;
 
         .btn-group {
