--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/bootstrap/reboot.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/bootstrap/reboot.scss
@@ -2,6 +2,10 @@
 
 @import "bowerassets/bootstrap/scss/reboot";
 
+body {
+    text-align: #{$start};
+}
+
 // Bad practices, should be removed in future
 ul,
 ol {
