--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/bootstrap/variables.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/bootstrap/variables.scss
@@ -39,6 +39,10 @@ $btn-mobile-font-size: 14px;
 $btn-mobile-border-radius: 20px;
 $btn-icon-mobile-fa-icon-font-size: 18px;
 
+$content-title-font-size: 20px;
+$content-title-font-weight: bold;
+$content-title-line-height: 1.5;
+
 // Buttons + Forms
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
